# gg

./: .ggConf.yaml  .ggConf.yaml.example  .gitignore  .travis.yml  Cargo.toml  Contributing.md  LICENSE  README.md
gifs/: ggClone.cast  ggCreate.cast  ggFetch.cast  ggStatus.cast  gghelp.cast
src/: branches.rs  clone.rs  conf.rs  config.rs  create.rs  dir.rs  fetch.rs  git.rs  input_args.rs  main.rs  progress.rs  status.rs
