[package]
name = "git-governance"
version = "0.2.1"
authors = ["Ninan John <jninan@thoughtworks.com>", "Dinesh B<dineshudt17@gmail.com>"]
edition = "2018"
description="A tool to manage multiple git repositories"
license = "Unlicense OR MIT"
homepage = "https://github.com/thecasualcoder/gg"
readme = "README.md"
repository = "https://github.com/thecasualcoder/gg"
keywords = ["git", "gg", "multi", "goverance"]
categories = ["command-line-utilities"]

[[bin]]
name="gg"
path = "src/main.rs"

[badges]
travis-ci = { repository = "thecasualcoder/gg" }

[dependencies]
walkdir = "2.2.9"
git2 = "0.10"
colored = "1.8.0"
clap = "2"
reqwest = "0.9.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.11"
regex = "1"

[dev-dependencies]
mockers = "0.21.0"
mockers_derive = "0.21.0"