[package]
authors = ["Ninan John <jninan@thoughtworks.com>", "Dinesh B<dineshudt17@gmail.com>"]
categories = ["command-line-utilities"]
description = "A tool to manage multiple git repositories"
edition = "2018"
homepage = "https://github.com/thecasualcoder/gg"
keywords = ["git", "gg", "multi", "goverance"]
license = "Unlicense OR MIT"
name = "git-governance"
readme = "README.md"
repository = "https://github.com/thecasualcoder/gg"
version = "0.3.1"
[badges]
[badges.travis-ci]
repository = "thecasualcoder/gg"

[[bin]]
name = "gg"
path = "src/main.rs"

[dependencies]
clap = "2"
colored = "1.8.0"
git2 = "0.10"
indicatif = "0.14"
rayon = "*"
regex = "1"
reqwest = "0.9.19"
serde_json = "1.0"
serde_yaml = "0.8.11"
walkdir = "2.2.9"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
mockers = "0.21.0"
mockers_derive = "0.21.0"
